# etrap-notary

./: .gitignore  API.md  CLAUDE.md  Cargo.toml  IMPROVEMENTS.md  README.md  build.sh  etrap_deploy.sh  package.json  test_sha256.sh
scripts/: check_gas_usage.sh  check_settings.sh  test_fee_calculation.sh  test_sha256.sh
src/: lib.rs
